fix double scroll in survey preview

--- a/src/presentation/modules/app/components/survey-preview/survey-preview.component.scss
+++ b/src/presentation/modules/app/components/survey-preview/survey-preview.component.scss
@@ -8,4 +8,5 @@
 
 .container{
     padding: 10px;
+    overflow: hidden;
 }
